5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1756_2390.log
== SUBMITION (2019-05-29 12:05:54) 
-- CODE:
from numpy import*

vp=array(eval(input())
vf=array(eval(input())
			
i=0
while(i<11):
	if(vp[i]==max(vp)):
		print(i+1)
	i=i+1
-- EXECUTION TIME:
0.497062
-- ERROR:
  File "/home/codebench/codes/1756/2390/main.py", line 4
    vf=array(eval(input())
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:06:13) 
-- CODE:
from numpy import*

vp=array(eval(input())
vf=array(eval(input())
			
i=0
while(i<11):
	if(vp[i]==max(vp)):
		print(i+1)
	i=i+1
-- ERROR:
File "XXXX", line 4
    vf=array(eval(input())
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:06:45) 
-- CODE:
from numpy import*

vp=array(eval(input()))
vf=array(eval(input()))
			
i=0
while(i<11):
	if(vp[i]==max(vp)):
		print(i+1)
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:06:51) 
-- CODE:
from numpy import*

vp=array(eval(input()))
vf=array(eval(input()))
			
i=0
while(i<11):
	if(vp[i]==max(vp)):
		print(i+1)
	i=i+1
-- EXECUTION TIME:
2.13441
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
